version stable of prospects